# job-radar

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.yml  docker-compose.yml  pyproject.toml
docker/: crontab
docs/: PLAN.md  REMOTE_ANALYSIS.md
scripts/: seed_demo.py
src/job_radar/: __init__.py  analyze.py  boards.py  bot.py  bridge.py  config.py  dashboard.py  dedup.py  filters.py  locations.py  notify.py  scan.py  schema.py  server.py  store.py  tgfmt.py
src/job_radar/migrations/: 0001_init.sql  0002_location_cleaned.sql
src/job_radar/sources/: __init__.py  adzuna.py  ashby.py  base.py  greenhouse.py  indeed.py  lever.py  linkedin.py  oracle.py  reed.py  workable.py  workday.py
tests/: test_analyze.py  test_boards.py  test_bot.py  test_bridge.py  test_config.py  test_dedup.py  test_filters.py  test_linkedin.py  test_locations.py  test_server.py  test_sources.py  test_store.py
