[project]
name = "job-hunt"
version = "0.1.0"
description = "Deterministic UK job-discovery pipeline that feeds career-ops for LLM evaluation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "duckdb>=1.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.6",
]

[project.scripts]
job-scan = "job_radar.scan:main"
job-serve = "job_radar.server:main"
job-bridge = "job_radar.bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_radar"]

[tool.ruff]
line-length = 100
target-version = "py311"
